增加项目地址

--- a/index.html
+++ b/index.html
@@ -111,13 +111,13 @@
 <body>
 
 <header>
-    <h2 id="title">实时查看日志信息 &nbsp;<button id="status" style="background-color: darkorange">正在连接...</button></h2>
+    <h2 id="title">实时查看日志信息 &nbsp;<button id="status" style="background-color: darkorange">正在连接...</button><button id=""><a href="http://github.com/xmge/seelog" style="text-decoration:none;"  target="_blank">项目地址</a></button>
+    </h2>
     <div class="tool">
         <button id="pause">暂停</button>
         <button id="clear">清屏</button>
         <button id="cut">截图</button>
         <span style="padding:1px;border:1px ; background:#FFF"><button style="width: auto">过滤</button><input id="filter" type="text"></span>
-
     </div>
 </header>
 <div id="log"></div>
