去掉打印日志

--- a/index.html
+++ b/index.html
@@ -167,9 +167,11 @@
     }
 
     .tool select {
+        color: blue;
         height: 30px;
-        width: 100px;
+        width: 120px;
         font-size: medium;
+        font-weight: lighter;
     }
 
     .tool button {
