--- a/403.html
+++ b/403.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0044)http://demo.demohuo.top/modals/50/5003/demo/ -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<title>403禁止页面模板</title>
+<title>seelog-403</title>
 
 
 <style>
