Update index.html 修改select框的绑定事件为change
修复切换选择之后还需要再点击一次下拉框才能实现真实切换的bug

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
             logName = $('#logs option:first').text();
 
-            $('#logs').click(function () {
+            $('#logs').on("change",function () {
                 $('#log').empty()
                 logName = $('#logs option:selected').text();
             })
