'文件未出现时，等待出现'

--- a/index.html
+++ b/index.html
@@ -19,23 +19,20 @@
             ws = new WebSocket("ws://"+ window.location.host +"/ws");
             ws.onmessage = function(e) {
 
-                // 过滤日志类型
                 slog = eval('(' + e.data + ')');
-                if (slog.logName != logName) {
-                    return
-                }
 
                 // 过滤查询条件
-                if (out && (filterText == "" || e.data.indexOf(filterText) != -1)){
+                if (out && (filterText == "" || slog.data.indexOf(filterText) != -1)){
                     $('#log').append("<pre style='color: white;font-size: 15px'>"+ slog.data +"</pre>").scrollTop($('#log')[0].scrollHeight)
                 }
             };
             ws.onclose = function () {
                 $('#status').css("background-color","red").text("链接断开")
-                ws = reConnect()
+                reConnect()
             }
             ws.onopen = function () {
                 $('#status').css("background-color","chartreuse").text("连接成功")
+                ws.send(JSON.stringify({logName:logName}));
             }
             ws.onerror = function (e) {
                 $('#status').css("background-color","red").text("链接断开")
